tests/snapshots/files__unify_term_encoding.snap
---
source: tests/files.rs
expression: snapshot_content
---
Lit: 2
Lit: 2
Mul: 2
Mul: 1
Var: 1
Var: 1
