tests/snapshots/files__until_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
AConst: 1
BConst: 1
IConst: 1
allgs: 4
g*: 21
inv: 0
